# claude-code-notify

./: .gitignore  CLAUDE.md  README.md  README_CN.md
.claude-plugin/: marketplace.json  plugin.json
.in_use/: 45344
hooks/: hooks.json
src-rust/: Cargo.toml
src-rust/src/: activate.rs  assets.rs  cli.rs  json.rs  log.rs  main.rs  process.rs  spawn.rs  state.rs  toast.rs  uiautomation.rs  util.rs
